# DaedalusProject

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSources.cmake  Makefile  README.md
.github/workflows/: staticDocs.yml  test.yml
doc/: Doxyfile  mainpage.md
include/common/: Common.h  Configurable.h  Logging.h  Utils.h
include/sim/: JSONBackend.h  PhysicsBackend.h
src/: daedalus.cpp
src/common/: Configurable.cpp  Logging.cpp  Utils.cpp
src/sim/: JSONBackend.cpp  PhysicsBackend.cpp
test/: test.cpp  test.h
test/common/: Configurable.cpp  Configurable.json
test/sim/: JSONBackend.cpp  JSONBackend.json
